<?xml version="1.0" encoding="utf-8"?>

<!--
Copyright 2009 David Revell

This file is part of PrivilegeFTP.

PrivilegeFTP is free software: you can redistribute it and/or modify
it under the terms of the GNU General Public License as published by
the Free Software Foundation, either version 3 of the License, or
(at your option) any later version.

PrivilegeFTP is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
GNU General Public License for more details.

You should have received a copy of the GNU General Public License
along with PrivilegeFTP.  If not, see <http://www.gnu.org/licenses/>.
-->

<resources>
<string name="name_version">프리빌리지 FTP 서버</string>
<string name="menu_byline">By 프리빌리지 of BluePremium\n\</string>

<string name="add_user">사용자 추가</string>
<string name="manage_users">사용자 관리</string>

<string name="FTP_name">프리빌리지 FTP 서버</string>  
<string name="server_options">서버 옵션</string>


<string name="menu_url">\n\ http://bluepremium.co.kr\n\</string>
<string name="start_server"><b>서버 구동</b></string>
<string name="stop_server"><b>서버 정지</b></string>


<string name="no_url_yet">\n\ FTP 서버를 구동해주세요.\n\</string>
<string name="server_status">\n\ 서버 상태:\n\</string>
<string name="my_url_is">\n\ 와이파이 URL:\n\</string>
<string name="cannot_start_until_wifi">와이파이에 연결되지 않았습니다.</string>
<string name="enable_wifi"><b>와이파이 ON</b></string>
<string name="disable_wifi">와이파이 OFF</string>
<string name="wifi_waiting">와이파이 대기</string>
<string name="wifi_status">와이파이 상태:</string>
<string name="last_error">에러:</string>
<string name="cant_get_url">URL 주소가 없는 주소입니다.</string>
<string name="running">\n\ 작동중\n\</string>
<string name="stopped">\n\ 대기중\n\</string>
<string name="unknown">\n\ 프리빌리지 FTP 서버를 사용해주셔서 감사합니다 ^^\n\</string>
<string name="session_monitor">세션 모니터 활성화:</string>
<string name="server_log">서버 로그 활성화:</string>
<string name="submit_bug_reports">&quot;버그 제보: &quot;</string>
<string name="ok">OK</string>
<string name="instructions_label">사용 방법</string>
<string name="setup_label">서버 설정</string>
<string name="save_settings">저장</string>
<string name="config_username">아이디:</string>
<string name="config_password">비밀번호:</string>
<string name="config_portnum">포트 넘버:</string>
<string name="username_validation_error">아이디는 영문으로 1자 이상이어야 합니다.</string>
<string name="password_validation_error">비밀번호는 숫자로 1자 이상이어야 합니다.</string>
<string name="port_validation_error">포트 넘버는 1과 65535 사이여야 합니다.</string>
<string name="wifi_state_receiver_label">와이파이 상태 리시버</string>
<string name="enabled">연결되어 있습니다.\n\</string>
<string name="disabled">연결되지 않았습니다.\n\</string>
<string name="waiting">대기중</string>
<string name="error_dialog_label">문제가 발생했습니다.</string>
<string name="the_error_was">문제는:</string>
<string name="stay_within_folder">서버로 접속할 폴더 (예: "/sdcard"):</string>
<string name="cancel">취소</string>
<string name="accept_connections_from_net">Accept connections from net proxy</string>
<string name="accept_connections_from_wifi">와이파이로 연결 동의</string>
<string name="stay_awake">CPU를 풀스피드로 가동</string>
<string name="at_least_one_listener">\n\ 와이파이 연결을 선택해주세요.\n\</string>
<string name="chrootDir_validation_error">서버로 접속할 폴더를 확인할수 없습니다.</string> 
<string name="violates_chroot">설정에 따라 접근할수 없습니다.</string>
<string name="must_config">PrivilegeFTP를 사용하기 전, 아이디와 비밀번호를 설정해주세요.</string>
<string name="notif_server_starting">프리빌리지 FTP 서버</string>
<string name="notif_title">프리빌리지 FTP</string>
<string name="notif_text">FTP 서버가 작동중입니다.</string>
<string name="proxy_experimental">Experimental global proxy</string>
<string name="proxy_status">Status:</string>
<string name="proxy_transferred">Used:</string>
<string name="proxy_url">URL:</string>
<!--  pst_xx are proxy states -->
<string name="pst_initial">none yet</string>
<string name="pst_connecting">connecting</string>
<string name="pst_connected">connected</string>
<string name="pst_failed">failed</string>
<string name="pst_unreachable">unreachable</string>
<string name="pst_disconnected">disconnected</string>
<string name="proxy_news">News:</string>
<string name="storage_warning">주의: 저장장치에 문제가 생겼습니다. 언마운트하시는걸 추천합니다.</string>
<string name="donation">\n\ 버그 제보는 이메일로 보내주시기 바랍니다. \n\ \n\ 이메일: privilege@bluepremium.co.kr\n\</string>
<string name="instructions_text">
1. 서버를 구동하세요.\n\
\n\ 2. 서버를 접속할 컴퓨터나 폰에서 FTP 클라이언트를 실행하세요.\n\
\n\ 3. 서버 URL에 프리빌리지 FTP에 표시된 "와이파이 URL"을 입력하세요.\n\
\n\ 4. 설정한 아이디와 비밀번호, 그리고 포트 넘버를 각각 입력하세요.\n\
\n\ 5. 로그인 후 파일은 업로드 혹은 다운로드 하시면 됩니다. ^^\n\
\n\ 더욱 자세한 내용을 보시려면\n\ http://bluepremium.co.kr을 참조해주세요.</string>
<string name="error_dialog_text">\
문제가 발생했습니다. \n\
원인: \n\
<b>%%%Replace_Here%%%</b>\n\
</string>
<string name="config_header">프리빌리지 FTP 설정</string>
<string name="config_intro">\n\ 아래 간단한 항목들만 설정하시면 프리빌리지 FTP를 바로 사용하실수 있습니다. 나중에 "설정"버튼을 눌러 설정을 변경할수 있습니다.\n\</string>
<string name="user_password_intro">프리빌리지 FTP 서버에 접속할때 사용할 계정</string>
<string name="widget_name">프리빌리지 FTP 위젯</string>
<string name="blank">\n\</string>


</resources>
