<?xml version="1.0" encoding="utf-8"?>

<!--
Copyright 2009 David Revell

This file is part of SwiFTP.

SwiFTP is free software: you can redistribute it and/or modify
it under the terms of the GNU General Public License as published by
the Free Software Foundation, either version 3 of the License, or
(at your option) any later version.

SwiFTP is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
GNU General Public License for more details.

You should have received a copy of the GNU General Public License
along with SwiFTP.  If not, see <http://www.gnu.org/licenses/>.
-->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
   	>
    <TextView
		    	android:layout_height="wrap_content"
		    	android:layout_width="wrap_content"
		    	android:text="@string/blank"
		    	android:textSize="5sp"
		    	android:textColor="#ffffff" 
	    />    
    <TextView
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:text="@string/config_header"
    	android:textSize="25sp"
    	android:textColor="@android:color/holo_blue_light"
    	/>
    
    <TextView
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:text="@string/config_intro"
    	/>
    
	<!--  A spacer for visual attractiveness -->
	<FrameLayout android:layout_height="8px"
		android:layout_width="fill_parent"
		>
	</FrameLayout>
	
	<!--  A horizontal line -->
	<FrameLayout android:layout_height="3px"
		android:layout_width="fill_parent"
		android:background="@android:color/holo_blue_light"
		>
	</FrameLayout>
    <TextView
		    	android:layout_height="wrap_content"
		    	android:layout_width="wrap_content"
		    	android:text="@string/blank"
		    	android:textSize="5sp"
		    	android:textColor="#ffffff" 
	    />	
	<TextView
		android:text="@string/user_password_intro"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		/>    
    <TextView
		    	android:layout_height="wrap_content"
		    	android:layout_width="wrap_content"
		    	android:text="@string/blank"
		    	android:textSize="1sp"
		    	android:textColor="#ffffff" 
	    />
	<TableLayout 
		android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:stretchColumns="*"
    	>
    	<TableRow>	
			<TextView
		    	android:layout_width="wrap_content"
		    	android:layout_height="wrap_content"
		    	android:text="@string/config_username"
		    	/> 

		    <EditText
		        android:id="@+id/config_username"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:textColorLink="#677B7A" />
 
		</TableRow>
		<TableRow>
			<TextView
		    	android:layout_width="wrap_content"
		    	android:layout_height="wrap_content"
		    	android:text="@string/config_password"
		    	/> 

		    <EditText
		        android:id="@+id/config_password"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:password="true"
		        android:textColorLink="#677B7A" />
 
		</TableRow>
		
	</TableLayout>
    <TextView
		    	android:layout_height="wrap_content"
		    	android:layout_width="wrap_content"
		    	android:text="@string/blank"
		    	android:textSize="5sp"
		    	android:textColor="#ffffff" 
	    />
	<!--  A horizontal line -->	
	<FrameLayout android:layout_height="3px"
		android:layout_width="fill_parent"
		android:background="@android:color/holo_blue_light"
		/>
	<TableLayout 
		android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:stretchColumns="*"
    	>
    <TextView
		    	android:layout_height="wrap_content"
		    	android:layout_width="wrap_content"
		    	android:text="@string/blank"
		    	android:textSize="3sp"
		    	android:textColor="#ffffff" 
	    />		
		<TableRow>
			<TextView
		    	android:layout_width="wrap_content"
		    	android:layout_height="wrap_content"
		    	android:text="@string/config_portnum"
		    	/> 

		    <EditText
		        android:id="@+id/config_portnum"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:textColorLink="#677B7A" />
 
		</TableRow>
		<TableRow>
			<TextView
		    	android:layout_width="wrap_content"
		    	android:layout_height="wrap_content"
		    	android:text="@string/stay_within_folder"
		    	/>

		    <EditText
		        android:id="@+id/config_chroot"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:textColorLink="#677B7A" />

		    </TableRow>
	</TableLayout>
	    <TextView
		    	android:layout_height="wrap_content"
		    	android:layout_width="wrap_content"
		    	android:text="@string/blank"
		    	android:textSize="5sp"
		    	android:textColor="#ffffff" 
	    />
	<FrameLayout android:layout_height="3px"
		android:layout_width="fill_parent"
		android:background="@android:color/holo_blue_light"
		/>

	<TableLayout 
		android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:stretchColumns="*"
    	>
	    <TextView
		    	android:layout_height="wrap_content"
		    	android:layout_width="wrap_content"
		    	android:text="@string/blank"
		    	android:textSize="3sp"
		    	android:textColor="#ffffff" 
	    />
		<TableRow>
			<TextView
			   	android:layout_width="wrap_content"
		    	android:layout_height="wrap_content"
		    	android:text="@string/accept_connections_from_wifi"
		    	/>

			<CheckBox
			    android:id="@+id/config_wifi_checkbox"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:checked="true"
			    android:textColorLink="#677B7A" />

		</TableRow>
		<TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stay_awake"
                />

            <CheckBox
                android:id="@+id/config_awake_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:textColorLink="#677B7A" />

        </TableRow>
	</TableLayout>
    <TextView
		    	android:layout_height="wrap_content"
		    	android:layout_width="wrap_content"
		    	android:text="@string/blank"
		    	android:textSize="5sp"
		    	android:textColor="#ffffff" 
	    />
	<FrameLayout android:layout_height="3px"
		android:layout_width="fill_parent"
		android:background="@android:color/holo_blue_light"
		/>
    <TextView
		    	android:layout_height="wrap_content"
		    	android:layout_width="wrap_content"
		    	android:text="@string/blank"
		    	android:textSize="5sp"
		    	android:textColor="#ffffff" 
	    />
	<LinearLayout 
		android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:orientation="horizontal"
	    android:gravity="right"
	    >
    <Button
    	android:id="@+id/config_save" 
    	android:text="@string/save_settings"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	/>	
	<Button
    	android:id="@+id/config_cancel" 
    	android:text="@string/cancel"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	/>	
	</LinearLayout>
	
</LinearLayout>
</ScrollView>