<?xml version="1.0" encoding="utf-8"?>

<!--
Copyright 2009 David Revell

This file is part of SwiFTP.

SwiFTP is free software: you can redistribute it and/or modify
it under the terms of the GNU General Public License as published by
the Free Software Foundation, either version 3 of the License, or
(at your option) any later version.

SwiFTP is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
GNU General Public License for more details.

You should have received a copy of the GNU General Public License
along with SwiFTP.  If not, see <http://www.gnu.org/licenses/>.
-->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	>
	
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent" 
    android:layout_height="fill_parent"
    android:orientation="vertical"
   	>
    <TextView
		    	android:layout_height="wrap_content"
		    	android:layout_width="wrap_content"
		    	android:text="@string/blank"
		    	android:textSize="5sp"
		    	android:textColor="#ffffff" 
	    />
    <TextView 
    	android:id="@+id/menu_top_text" 
    	android:layout_height="wrap_content"
    	android:layout_width="wrap_content"
    	android:text="@string/name_version"
    	android:textSize="25sp"
    	android:textColor="@android:color/holo_blue_light" 
    	/>
    
    <LinearLayout 
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal"
	>    	
<!--	This was cluttering the UI-->
<!--    <TextView -->
<!--    	android:layout_height="wrap_content"-->
<!--    	android:layout_width="wrap_content"-->
<!--    	android:text="@string/submit_bug_reports"-->
<!--    	android:textSize="12sp" -->
<!--    	/>-->
    
    <TextView 
    	android:id="@+id/menu_url" 
    	android:layout_height="wrap_content"
    	android:layout_width="wrap_content"
    	android:text="@string/menu_url"
    	android:textSize="16sp" 
    	android:textColor="#ffffff"
    	/>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu_byline"
        android:textColorHint="@drawable/semi_black"
        android:textSize="16sp" />
		
    <!--  A horizontal line -->
	<FrameLayout android:layout_height="3px"
		android:layout_width="fill_parent"
		android:background="@android:color/holo_blue_light"
		>
	</FrameLayout>
	
	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    	android:layout_width="fill_parent" android:layout_height="wrap_content"
    	android:gravity="center_horizontal"
    	android:orientation="vertical"
    	>
    	
		<LinearLayout 
			xmlns:android="http://schemas.android.com/apk/res/android"
			android:layout_height="wrap_content"
			android:layout_width="fill_parent"
			android:orientation="horizontal"
			android:gravity="center"
			>
			
		    <TextView
		    	android:layout_height="wrap_content"
		    	android:layout_width="wrap_content"
		    	android:text="@string/blank"
		    	android:textSize="30sp"
		    	android:textColor="#ffffff" 
		    />

		    <Button
		        android:id="@+id/start_stop_button"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/start_server"
		        android:textColor="#ffffff"
		        android:textColorHint="#ffffff"
		        android:textColorLink="#ffffff"/>

<!--  This doesn't need to exist -->
<!--			<Button-->
<!--				android:id="@+id/wifi_button" -->
<!--				android:layout_height="wrap_content"-->
<!--				android:layout_width="wrap_content"-->
<!--				android:text="@string/enable_wifi"-->
<!--				/>-->

			<Button
			    android:id="@+id/instructions"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:text="@string/instructions_label"
			    android:textColor="#ffffff"
			    android:textColorHint="#ffffff"
			    android:textColorLink="#ffffff" />

			<Button
			    android:id="@+id/setup"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:text="@string/setup_label"
			    android:textColor="#ffffff"
			    android:textColorHint="#ffffff"
			    android:textColorLink="#ffffff" />

		</LinearLayout>
		
	</LinearLayout>
	
    <!--  A horizontal line -->
	<FrameLayout android:layout_height="3px"
		android:layout_width="fill_parent"
		android:background="@android:color/holo_blue_light"
		>
	</FrameLayout>
	
	<TableLayout 
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:shrinkColumns="2">
		<TableRow>

			<TextView
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:gravity="left"
			    android:text="@string/server_status"
			    android:textColorHint="@drawable/semi_black"
			    android:textSize="16sp" />

			<!--A small spacer between the columns -->
		    <FrameLayout
		    	android:layout_width="3sp"
		    	android:layout_height="wrap_content"
		    	/>
		   	<TextView
		  		android:id="@+id/server_status" 
	  			android:layout_height="wrap_content"
	  			android:layout_width="wrap_content"
	  			android:text="@string/unknown"
				android:textColor="#ffffff" 
	  			android:textSize="16sp" 
  				/>
  		</TableRow>
  	</TableLayout>
  	
    <!--  A horizontal line -->
	<FrameLayout android:layout_height="3px"
		android:layout_width="fill_parent"
		android:background="@android:color/holo_blue_light"
		>
	</FrameLayout>
  		
  	<TableLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:shrinkColumns="2">
    	<TableRow>

  			<TextView
  			    android:layout_width="wrap_content"
  			    android:layout_height="wrap_content"
  			    android:gravity="left"
  			    android:text="@string/my_url_is"
  			    android:textColorHint="@drawable/semi_black"
  			    android:textSize="16sp" />

			<!--A small spacer between the columns -->
		    <FrameLayout
		    	android:layout_width="3sp"
		    	android:layout_height="wrap_content"
		    	/>
		    <TextView
		    	android:id="@+id/ip_address" 
		    	android:layout_height="wrap_content"
		    	android:layout_width="wrap_content"
		    	android:text="@string/no_url_yet"
		    	android:textSize="16sp"
		    	android:textColor="#ffffff" 
		    />
		</TableRow>
  		<TableRow>

  			<TextView
  			    android:layout_width="wrap_content"
  			    android:layout_height="wrap_content"
  			    android:gravity="left"
  			    android:text="@string/wifi_status"
  			    android:textColorHint="@drawable/semi_black"
  			    android:textSize="16sp" />

			<!--A small spacer between the columns -->
		    <FrameLayout
		    	android:layout_width="3sp"
		    	android:layout_height="wrap_content"
		    	/>
			<TextView
		  		android:id="@+id/wifi_status" 
	  			android:layout_height="wrap_content"
	  			android:layout_width="wrap_content"
	  			android:text="@string/unknown"
				android:textColor="#ffffff" 
	  			android:textSize="16sp" 
  				/>
  		</TableRow>
  		<TableRow>
  			<TextView
  				android:id="@+id/last_error_label"
		    	android:layout_height="wrap_content"
		    	android:layout_width="wrap_content"
		    	android:text="@string/last_error"
		    	android:textSize="16sp"
		    	android:gravity="left"
		    	android:visibility="gone"
	    	/>
			<!--A small spacer between the columns -->
		    <FrameLayout
		    	android:layout_width="3sp"
		    	android:layout_height="wrap_content"
		    	/>
			<TextView
		  		android:id="@+id/last_error" 
	  			android:layout_height="wrap_content"
	  			android:layout_width="wrap_content"
	  			android:text="@string/unknown"
				android:textColor="#0EEADF" 
	  			android:textSize="16sp" 
		    	android:visibility="gone"
  				/>
  		</TableRow>
	</TableLayout>

    <!--  A horizontal line -->
	<FrameLayout android:layout_height="3px"
		android:layout_width="fill_parent"
		android:background="@android:color/holo_blue_light"
		>
	</FrameLayout>



    <TableLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:shrinkColumns="2">
        <TableRow>
            <!--A small spacer between the columns -->
            <FrameLayout
                android:layout_width="3sp"
                android:layout_height="wrap_content"
                />
            <TextView
                android:id="@+id/proxy_status" 
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/unknown"
                android:textColor="#ffffff" 
                android:textSize="16sp" 
                />
        </TableRow>
        <TableRow>   
            <!--A small spacer between the columns -->
            <FrameLayout
                android:layout_width="3sp"
                android:layout_height="wrap_content"
                />
        </TableRow>
        <TableRow>
            <!--A small spacer between the columns -->
            <FrameLayout
                android:layout_width="3sp"
                android:layout_height="wrap_content"
                />
        </TableRow>
        <TableRow>   
            <!--A small spacer between the columns -->
            <FrameLayout
                android:layout_width="3sp"
                android:layout_height="wrap_content"
                />
        </TableRow>
        
    </TableLayout>

    <!--  A horizontal line -->
	<FrameLayout android:layout_height="3px"
		android:layout_width="fill_parent"
		android:background="@android:color/holo_blue_light"
		>
	</FrameLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/donation"
        android:textColorHint="@drawable/semi_black"
        android:textSize="16sp" />
	
	<LinearLayout 
		android:orientation="horizontal" 
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:visibility="gone">
	
	<TextView
		android:layout_height="wrap_content"
		android:layout_width="wrap_content"
		android:text="@string/server_log"
		android:textColor="#ffffff"
	/>
	<CheckBox
		android:id="@+id/server_log_checkbox" 
		android:layout_height="wrap_content"
		android:layout_width="wrap_content"
		android:checked="false"
	/>
	</LinearLayout>
	
	<TextView
		android:id="@+id/server_log"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:background="@android:color/holo_blue_light"
	/>
	

	
	<LinearLayout 
		android:orientation="horizontal" 
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:visibility="gone">
	
		<TextView
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:text="@string/session_monitor"
			android:textColor="#ffffff"
			android:visibility="gone"
		/>
		<CheckBox
			android:id="@+id/session_monitor_checkbox"
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:checked="false"
			android:visibility="gone"
		/>
	</LinearLayout>
	
	<TextView
		android:id="@+id/session_monitor"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:background="@android:color/holo_blue_light"
		android:visibility="gone"
	/>
	
    <!--  A horizontal line -->
	<FrameLayout android:layout_height="3px"
		android:layout_width="fill_parent"
		android:background="@android:color/holo_blue_light"
		>
	</FrameLayout>
	
	<!--  It's visually pleasing to have some empty space at the bottom -->
	<FrameLayout android:layout_height="15px"
		android:layout_width="fill_parent"
		/>
	
</LinearLayout>
</ScrollView>